--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "cron": "^4.1.0",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
+    "nodemailer": "^7.0.11",
     "rss-parser": "^3.13.0"
   }
 }
