Fix ADN Radio title scraping and update config

--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,8 +1,8 @@
 [
     {
-        "imageUrl": "https://images.unsplash.com/photo-1534951009808-766178b4760b?q=80&w=1470&auto=format&fit=crop",
-        "linkUrl": "https://www.google.com/search?q=pesca+chile",
-        "altText": "Pesca Industrial en Alta Mar"
+        "imageUrl": "https://beta.elmercurio.com/uploads/db/b5/dbb54ee5-bfc6-4647-864c-85e399defc4c.jpg/850",
+        "linkUrl": "https://beta.elmercurio.com/uploads/db/b5/dbb54ee5-bfc6-4647-864c-85e399defc4c.jpg/850",
+        "altText": "Desde el dólar y el ciclo de bajas de tasas hasta los efectos de la IA: Siete claves del mensaje del Banco Central"
     },
     {
         "imageUrl": "https://images.unsplash.com/photo-1621451537084-482c73073a0f?q=80&w=1374&auto=format&fit=crop",
