Add Rosanna Costa to slider

--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,5 +1,10 @@
 [
     {
+        "imageUrl": "rosanna-costa.jpg",
+        "linkUrl": "https://digital.elmercurio.com/2025/12/21/B/NR4JR13L/DK4JUPI9",
+        "altText": "<b><span style='text-transform:uppercase'>Rosanna Costa:</span></b> “El dinamismo de inversión en minería y energía empieza a expandirse gradualmente a otros sectores”"
+    },
+    {
         "imageUrl": "https://www.mundoacuicola.cl/new/wp-content/uploads/2023/06/CondeppMarchaConcepcionPescadores.jpg",
         "linkUrl": "https://www.mundoacuicola.cl/new/pesca-artesanal-denuncia-que-el-gore-biobio-deja-dormir-importantes-proyectos/",
         "altText": "Pesca artesanal denuncia que el GORE Biobío deja dormir importantes proyectos"
