Add Emol article to slider and DB

--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,5 +1,10 @@
 [
     {
+        "imageUrl": "https://static.emol.cl/emol50/Fotos/2025/12/22/file_20251222112653.jpg",
+        "linkUrl": "https://www.emol.com/noticias/Economia/2025/12/22/1186540/pescadores-contraloria-subsecretaria.html",
+        "altText": "Pescadores acuden a Contraloría por ley de fraccionamiento: acusan \"vicios\" en actuar de la Subsecretaría"
+    },
+    {
         "imageUrl": "rosanna-costa.jpg",
         "linkUrl": "https://digital.elmercurio.com/2025/12/21/B/NR4JR13L/DK4JUPI9",
         "altText": "<b><span style='text-transform:uppercase'>Rosanna Costa:</span></b> “El dinamismo de inversión en minería y energía empieza a expandirse gradualmente a otros sectores”"
