Fix broken links and add DF article

--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,5 +1,10 @@
 [
     {
+        "imageUrl": "https://www.df.cl/noticias/site/artic/20251222/imag/foto_0000001720251222130948/Aton_1006541.jpg",
+        "linkUrl": "https://www.df.cl/regiones/biobio/empresas/resurge-polemica-por-ley-de-fraccionamiento-pesquero-industriales-y",
+        "altText": "Resurge polémica por Ley de Fraccionamiento Pesquero: industriales y artesanales piden a Contraloría impugnar apertura de registro a nuevos actores"
+    },
+    {
         "imageUrl": "https://static.emol.cl/emol50/Fotos/2025/12/22/file_20251222112653.jpg",
         "linkUrl": "https://www.emol.com/noticias/Economia/2025/12/22/1186540/pescadores-contraloria-subsecretaria.html",
         "altText": "Pescadores acuden a Contraloría por ley de fraccionamiento: acusan \"vicios\" en actuar de la Subsecretaría"
