--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cron": "^4.1.0",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "googleapis": "^169.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.11.0",
     "nodemailer": "^7.0.11",
