--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,6 +1,11 @@
 [
     {
         "imageUrl": "merluza-pacificblu.jpg",
+        "linkUrl": "https://www.df.cl/regiones/biobio/empresas/tras-nueva-reduccion-en-cuota-de-merluza-comun-gerente-de-pacificblu-pone",
+        "altText": "Tras nueva rebaja en cuota de merluza común, gerente de PacificBlu pone en duda continuidad operativa"
+    },
+    {
+        "imageUrl": "merluza-pacificblu.jpg",
         "linkUrl": "https://www.latercera.com/pulso/noticia/gobierno-define-cuota-de-merluza-para-2026-y-pacificblu-arremete-decision-confirma-el-fracaso-total-de-la-gestion/",
         "altText": "Gobierno define cuota de merluza para 2026 y PacificBlu arremete contra decisión"
     },
