Update app: change slider image for Ley Longueira news

--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,6 +1,6 @@
 [
   {
-    "imageUrl": "https://www.elciudadano.com/wp-content/uploads/2026/01/Fraccionamiento.jpg",
+    "imageUrl": "img/fraccionamiento-pesca.jpg",
     "linkUrl": "https://www.elciudadano.com/chile/fin-a-la-ley-longueira-en-la-practica-nuevo-fraccionamiento-entra-en-2026-y-artesanales-piden-garantias-sociales/01/02/",
     "altText": "Fin a la Ley Longueira: en la práctica nuevo fraccionamiento entra en 2026 y artesanales piden garantías sociales"
   },
