Add Jorge Quiroz article to slider and clipping

--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,5 +1,10 @@
 [
   {
+    "imageUrl": "https://www.elciudadano.com/wp-content/uploads/2025/01/Quiroz-Ministro-de-Hacienda.jpg",
+    "linkUrl": "https://www.elciudadano.com/actualidad/presidente-del-consejo-por-la-defensa-del-patrimonio-pesquero-critica-designacion-de-jorge-quiroz/01/08/",
+    "altText": "Presidente del Consejo por la Defensa del Patrimonio Pesquero critica designación de Jorge Quiroz"
+  },
+  {
     "imageUrl": "img/fraccionamiento-pesca.jpg",
     "linkUrl": "https://www.elciudadano.com/chile/fin-a-la-ley-longueira-en-la-practica-nuevo-fraccionamiento-entra-en-2026-y-artesanales-piden-garantias-sociales/01/02/",
     "altText": "Fin a la Ley Longueira: en la práctica nuevo fraccionamiento entra en 2026 y artesanales piden garantías sociales"
