Add Aysén merluza article to slider and clipping

--- a/public/slider-config.json
+++ b/public/slider-config.json
@@ -1,5 +1,10 @@
 [
   {
+    "imageUrl": "https://media.biobiochile.cl/wp-content/uploads/2026/01/social-aysen-cuota-merluza-pesca-enojo-ejecutivo.jpg",
+    "linkUrl": "https://www.biobiochile.cl/especial/bbcl-investiga/noticias/articulos/2026/01/10/aysen-en-alerta-pescadores-rechazan-nuevas-cuotas-de-merluza-y-critican-al-ejecutivo.shtml",
+    "altText": "Aysén en alerta: pescadores rechazan nuevas cuotas de merluza y critican al Ejecutivo"
+  },
+  {
     "imageUrl": "https://www.elciudadano.com/wp-content/uploads/2025/01/Quiroz-Ministro-de-Hacienda.jpg",
     "linkUrl": "https://www.elciudadano.com/actualidad/presidente-del-consejo-por-la-defensa-del-patrimonio-pesquero-critica-designacion-de-jorge-quiroz/01/08/",
     "altText": "Presidente del Consejo por la Defensa del Patrimonio Pesquero critica designación de Jorge Quiroz"
