Fix MongoDB timeout, differentiate client entry points, and independent sliders

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start:pesca": "CLIENT_ID=pesca node index.js",
-    "start:tacal": "CLIENT_ID=tacal node index.js",
+    "start:pesca": "node index-pesca.js",
+    "start:tacal": "node index-tacal.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
